test/log/compare/vcmpgt_vx_i16_m.txt
vcmpgt_vx_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcmpgt_vx_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcmpgt_vx_i16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vcmpgt_vx_i16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vcmpgt_vx_i16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vcmpgt_vx_i16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vcmpgt_vx_i16_m.c:22:6: warning: no previous prototype for 'vcmpgt_vx_i16_m_golden' [-Wmissing-prototypes]
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vcmpgt_vx_i16_m.c: In function 'vcmpgt_vx_i16_m_golden':
vcmpgt_vx_i16_m.c:24:25: error: 'TODO' undeclared (first use in this function)
   24 |         exp_result[i] = TODO;
      |                         ^~~~
vcmpgt_vx_i16_m.c:24:25: note: each undeclared identifier is reported only once for each function it appears in
vcmpgt_vx_i16_m.c:22:38: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vcmpgt_vx_i16_m.c:22:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |                                           ~~~~~~~~~^~~~~~~
vcmpgt_vx_i16_m.c:22:69: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |                                                            ~~~~~~~~~^
vcmpgt_vx_i16_m.c:22:79: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |                                                                       ~~~~~~~~^
vcmpgt_vx_i16_m.c: In function 'main':
vcmpgt_vx_i16_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vcmpgt_vx_i16_m.c:48:28: error: incompatible type for argument 1 of 'vcmpgt_vx_i16_m_golden'
   48 |     vcmpgt_vx_i16_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vcmpgt_vx_i16_m.c:22:38: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vcmpgt_vx_i16_m_golden(bool32_t mask,int16_t *maskoff,int16_t *a,int16_t b,uint16_t *exp_result) {
      |                             ~~~~~~~~~^~~~
vcmpgt_vx_i16_m.c:51:35: error: incompatible type for argument 2 of 'vcmpgt_vx_i16_m'
   51 |     result = vcmpgt_vx_i16_m(mask,maskoff,a,b);
      |                                   ^~~~~~~
      |                                   |
      |                                   int16x32_t
In file included from vcmpgt_vx_i16_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2668:1: note: expected 'bool32_t' but argument is of type 'int16x32_t'
 2668 | __RUGRATS_CMP_VX_OP (cmpgt, i, int, int, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmpgt_vx_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcmpgt_vx_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcmpgt_vx_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmpgt_vx_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed